Bug 66249 - Assertion hit when using composition manager with > 8k windows and debug=full [SNA]
Summary: Assertion hit when using composition manager with > 8k windows and debug=full...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-27 10:15 UTC by Clemens Eisserer
Modified: 2013-06-28 08:46 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Clemens Eisserer 2013-06-27 10:15:15 UTC
Sorry, couldn't resist ;)

Debug log is available at: https://mega.co.nz/#!V1UzEJ4B!KVGkijX05cXxVnCQ2bwWch4WPWswOeT6lf850NIweJ8


Program received signal SIGABRT, Aborted.
0x00000035b9e35819 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
56	  return INLINE_SYSCALL (tgkill, 3, pid, selftid, sig);
(gdb) bt
#0  0x00000035b9e35819 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
#1  0x00000035b9e36f28 in __GI_abort () at abort.c:90
#2  0x00000035b9e2e7f6 in __assert_fail_base (fmt=0x35b9f7d2e8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", 
    assertion=assertion@entry=0x7f6e124cb2b8 "!too_large(op->dst.width, op->dst.height)", 
    file=file@entry=0x7f6e124cb1d5 "gen6_render.c", line=line@entry=685, 
    function=function@entry=0x7f6e124cc200 <__PRETTY_FUNCTION__.25122> "gen6_emit_drawing_rectangle") at assert.c:92
#3  0x00000035b9e2e8a2 in __GI___assert_fail (assertion=0x7f6e124cb2b8 "!too_large(op->dst.width, op->dst.height)", 
    file=0x7f6e124cb1d5 "gen6_render.c", line=685, 
    function=0x7f6e124cc200 <__PRETTY_FUNCTION__.25122> "gen6_emit_drawing_rectangle") at assert.c:101
#4  0x00007f6e1245552d in gen6_emit_drawing_rectangle (sna=0x7f6e10ac9000, op=0x7fff301b3e10) at gen6_render.c:685
#5  0x00007f6e12455b46 in gen6_emit_state (sna=0x7f6e10ac9000, op=0x7fff301b3e10, wm_binding_table=65520)
    at gen6_render.c:875
#6  0x00007f6e12456d6f in gen6_emit_composite_state (sna=0x7f6e10ac9000, op=0x7fff301b3e10) at gen6_render.c:1300
#7  0x00007f6e12459d1f in gen6_render_composite (sna=0x7f6e10ac9000, op=3 '\003', src=0x1753900, mask=0x1603440, 
    dst=0x174e440, src_x=0, src_y=-10, msk_x=0, msk_y=0, dst_x=5489, dst_y=718, width=99, height=13, tmp=0x7fff301b3e10)
    at gen6_render.c:2308
#8  0x00007f6e123c68cb in sna_composite (op=3 '\003', src=0x1753900, mask=0x1603440, dst=0x174e440, src_x=0, src_y=-10, 
    mask_x=0, mask_y=0, dst_x=7, dst_y=6, width=99, height=13) at sna_composite.c:638
#9  0x00007f6e123de625 in glyphs_via_mask (sna=0x7f6e10ac9000, op=3 '\003', src=0x1753900, dst=0x174e440, format=0x10c6548, 
    src_x=0, src_y=-10, nlist=0, list=0x7fff301b6520, glyphs=0x7fff301b6990) at sna_glyphs.c:1179
#10 0x00007f6e123e0069 in sna_glyphs (op=3 '\003', src=0x1753900, dst=0x174e440, mask=0x10c6548, src_x=0, src_y=0, nlist=1, 
    list=0x7fff301b6510, glyphs=0x7fff301b6910) at sna_glyphs.c:1721
#11 0x00000000005204e6 in damageGlyphs (op=<optimized out>, pSrc=0x1753900, pDst=0x174e440, maskFormat=0x0, 
    xSrc=<optimized out>, ySrc=<optimized out>, nlist=1, list=0x7fff301b6510, glyphs=0x7fff301b6910) at damage.c:629
#12 0x000000000051a09e in ProcRenderCompositeGlyphs (client=0x167aa60) at render.c:1390
#13 0x0000000000436df7 in Dispatch () at dispatch.c:432
#14 0x00000000004263fa in main (argc=8, argv=0x7fff301b72f8, envp=<optimized out>) at main.c:298
Comment 1 Chris Wilson 2013-06-27 10:27:53 UTC
Oh well, I knew the day would come when I couldn't ignore that assertion any longer. Perhaps I can fudge it a little more before resorting to having to manually massage all the vertex coordinates.
Comment 2 Chris Wilson 2013-06-28 08:46:30 UTC
Helps to read the logs...

commit 0c93a0cf41cbfe88b18e9e69bd97bd75cf2404bd
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Jun 28 00:35:14 2013 +0100

    sna: Compensate redirect drawing subrectangle inside an offset pixmap
    
    Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=66249
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

There may be a few more errors, of course!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.